--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Allow eval in development for Vite HMR -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline'; object-src 'none';" />
     <title>webapp</title>
   </head>
   <body class="bg-neutral-50 dark:bg-neutral-900 text-neutral-900 dark:text-neutral-100">
